# PI

./: .gitignore  CMakeLists.txt  README.md  main.c
week001/: fibo.c
week002/: weight.c
week003/: pair.c
week004/: fact.c  merge.c  neigh.c
week005/: spiral.c
week006/: rec.c  rom.c
week007/: bin.c
week008/: last.c  last2.c  odd.c  seq.c
week009/: sol.c
week011/: 1.c  axes.c  ball.c  reg.c
week1/: 1.c  2.c  4.c
week10/: ban.c  jump.c  net.c
week2/: 1.c  1v2.c  narc.c
week3/: 1.c  pair_bad_implementation.c  pri.c
week4/: 3.c
week5/: 1.c  square.c
week6/: tri.c
week7/: seg.c  stamp.c
week8/: last2.c
week9/: ring.c  semi.c  sol.c
